added full list of statistics

--- a/main.ipynb
+++ b/main.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -217,6 +217,47 @@
     "coloring = nx.coloring.greedy_color(G, strategy=\"largest_first\")\n",
     "# print(max(coloring.values()))\n",
     "print(\"Greedy Graph Coloring Number:\" , max(coloring.values()) + 1) # add 1 as 0 is used also as a color"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Statistics:\n",
+      "Number of Nodes:  1005\n",
+      "Number of Edges:  25571\n",
+      "Nodes in largest WCC: 986 (0.981)\n",
+      "Edges in largest WCC: 25552 (0.999)\n",
+      "Nodes in largest WCC: 803 (0.799)\n",
+      "Edges in largest WCC: 24729 (0.967)\n",
+      "Average clustering coefficient: 0.3993549664221539\n",
+      "Number of triangles: 105461.0\n",
+      "Fraction of closed triangles: 0.001875701313731399\n",
+      "Diameter (longest shortest path): 7\n",
+      "90-percentile effective diameter: 3.0\n",
+      "Greedy Graph Coloring Number: 19\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Dataset Statistics\")\n",
+    "print(\"Number of Nodes: \", G.number_of_nodes())\n",
+    "print(\"Number of Edges: \", G.number_of_edges())\n",
+    "print( \"Nodes in largest WCC:\",  largestwccNodes, \"(\" + str(largestwccNodeRatio) + \")\" )\n",
+    "print( \"Edges in largest WCC:\",  largestwccEdges, \"(\" + str(largestwccEdgeRatio) + \")\" )\n",
+    "print( \"Nodes in largest WCC:\",  largestsccNodes, \"(\" + str(largestsccNodeRatio) + \")\" )\n",
+    "print( \"Edges in largest WCC:\",  largestsccEdges, \"(\" + str(largestsccEdgeRatio) + \")\" )\n",
+    "print(\"Average clustering coefficient:\", avgClusterCoeff)\n",
+    "print(\"Number of triangles:\", numTriangles)\n",
+    "print(\"Fraction of closed triangles:\", fractClosedTriangles)\n",
+    "print(\"Diameter (longest shortest path):\", diameter)\n",
+    "print(\"90-percentile effective diameter:\",np.percentile(distarr, 90))  \n",
+    "print(\"Greedy Graph Coloring Number:\" , max(coloring.values()) + 1) "
    ]
   }
  ],
